--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ assets/img/.DS_Store
 assets/.DS_Store
 assets/favicon/.DS_Store
 assets/img/coordinate/.DS_Store
+.DS_Store
+assets/img/mk-97/.DS_Store
